[Refactor] correction in 2.2 ethics

--- a/5º Año/Ética y Deontología  Profesional/Unidad 2/2. Codigos de Etica para los Licenciados en Informatica.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 2/2. Codigos de Etica para los Licenciados en Informatica.md
@@ -4,14 +4,14 @@ Anteriormente, hemos definido a la ética profesional como el conjunto de normas
 
 La ética informática es una ciencia que se encarga del comportamiento del ser humano en cuanto a los aspectos de las tecnologías informáticas, siempre teniendo en cuenta lo que está bien y lo que no, poniendo como prioridad que no debemos hacer mal uso de la información porque podemos perjudicar a terceros. Este código de ética se sustenta en los siguientes principios:
 
-- **Independencia:** libre adopción de decisiones.
-- **Integridad:** supone corrección, honestidad, sinceridad en la realización de un trabajo.
-- **Objetividad:** imparcialidad.
-- **Confidencialidad:** la no revelación de información a terceros, excepto por autorización o requerimiento de autoridad competente.
-- **Responsabilidad:** cumplimiento cabal y oportuno de compromisos asumidos.
-- **Respeto entre colegas:** equilibrio del entorno profesional.
-- **Observar las disposiciones normativas:** aplicación de normas que no sean contrarias y/o incompatibles.
-- **Competencia y actualización profesional:** garantía para realizar un trabajo.
+- **Independencia:** Libre adopción de decisiones.
+- **Integridad:** Supone corrección, honestidad, sinceridad en la realización de un trabajo.
+- **Objetividad:** Imparcialidad.
+- **Confidencialidad:** La no revelación de información a terceros, excepto por autorización o requerimiento de autoridad competente.
+- **Responsabilidad:** Cumplimiento cabal y oportuno de compromisos asumidos.
+- **Respeto entre colegas:** Equilibrio del entorno profesional.
+- **Observar las disposiciones normativas:** Aplicación de normas que no sean contrarias y/o incompatibles.
+- **Competencia y actualización profesional:** Garantía para realizar un trabajo.
 
 >[!tldr] Código de Ética Profesional o Códigos Deontológicos
 >Un código ético a nivel legal es un cuerpo de leyes que forma un sistema de legislación sobre alguna materia. Se puede entender también como un sistema normativo que considera las responsabilidades y obligaciones que se imponen al profesional. Estos códigos poseen la siguiente estructura:
