Capa de enlace de datos Done | Redes

--- a/4º Año/Calculo Numerico/Unidad 1/1. Mediciones y Errores.md
+++ b/4º Año/Calculo Numerico/Unidad 1/1. Mediciones y Errores.md
@@ -135,7 +135,7 @@ $$
 El problema es que se desconoce el valor de $x$ y se tiene su aproximación $\overline{x}$. Este problema se supera, si $\overline{x}$ está cerca de $x$ y $f(x)$ es ***continua y diferenciable***. Si se satisfacen las condiciones, usamos la serie de Taylor para calcular $f(x)$ cerca de $f(\overline{x})$.
 
 $$
-f(x) = f(\bar{x}) + f'(\bar{x}) \cdot (x - \bar{x}) + \frac{f''(\bar{x})}{2!} \cdot (x - \bar{x})^2 + \frac{f'''(\bar{x})}{3!} \cdot (x - \bar{x})^3 + \cdots + \frac{f^{(n)}(\bar{x})}{n!} \cdot (x - \bar{x})^n + R_n
+f(x) = f(\bar{x}) + f'(\bar{x}) \cdot (x - \bar{x}) + \frac{f''(\bar{x})}{2!} \cdot (x - \bar{x})^2 + \cdots + \frac{f^{(n)}(\bar{x})}{n!} \cdot (x - \bar{x})^n + R_n
 $$
 
 Si nos quedamos con los dos primeros términos del desarrollo y pasamos $f(\overline{x})$ al primer miembro, queda la expresión:
@@ -175,7 +175,6 @@ Si los cálculos se realizan utilizando una computadora se debe considerar que l
 ## Análisis Numérico
 
 Se pueden definir a los métodos numéricos como las técnicas mediante las cuales es posible formular problemas de manera que puedan resolverse utilizando operaciones aritméticas, o también como el grupo de conocimientos matemáticos relacionados con el diseño y análisis de algoritmos necesarios para resolver problemas de ciencia e ingeniería. Estos métodos se caracterizan porque permiten dar más importancia a la formulación e interpretación de la solución, los cálculos involucrados están relacionados con cantidades discretas, permiten obtener resultados aproximados y ayudan a identificar, cuantificar y minimizar los errores.
-
 En el ejercicio de la profesión y en la vida diaria, se presentan diferentes problemas, que no tienen una solución matemática exacta, pero que es imprescindible resolver como:
 
 - **Raíces de ecuaciones**, que está relacionado de una variable o un parámetro que satisface una ecuación lineal o no lineal.
@@ -190,9 +189,9 @@ En el ejercicio de la profesión y en la vida diaria, se presentan diferentes pr
 ##### Modelos Matemáticos
 
 El objetivo de un modelo consiste en reproducir la realidad de la forma más fiel posible, tratando de entender cómo se comporta el mundo real y obteniendo las respuestas que pueden esperarse de determinadas acciones. Su selección es una etapa crucial para obtener una solución satisfactoria a un problema real. Las estructuras matemáticas asociadas no son arbitrarias, sino una consecuencia de la realidad misma.
-
 Un ***modelo mental*** puede definirse como una representación de la realidad en la que se consideran los aspectos más relevantes, es decir el modelo representa una parte de la realidad.
 Un ***modelo matemático*** es una formulación o ecuación que expresa las características fundamentales de un sistema o proceso físico en términos matemáticos. Los modelos pueden estar constituidos por simples ecuaciones algebraicas hasta grandes y complicados sistemas de ecuaciones diferenciales. Sus características son:
+
 1. Describe un sistema o proceso natural en términos matemáticos.
 2. Representa una idealización y una simplificación de la realidad.
 3. Conduce a resultados predecibles y, en consecuencia, puede utilizarse para propósitos de predicción.
