--- a/4º Año/Calculo Numerico/Unidad 2/1. Repaso de Matrices.md
+++ b/4º Año/Calculo Numerico/Unidad 2/1. Repaso de Matrices.md
@@ -59,8 +59,8 @@ La adjunta de un elemento $M_{ij}$, denotado como $A_{ij}$ se obtiene de la sigu
 $$
 A_{ij} = (-1)^{i+j}M_{ij}
 $$
-la matriz que se obtiene de todos los $A_{ij}$ elementos, se lo denomina matriz adjunta. La cual se utiliza para calcular la inversa de una matriz, mediante la siguiente fórmula:
+La matriz que se obtiene de todos los $A_{ij}$ elementos, se lo denomina matriz adjunta. La cual se utiliza para calcular la inversa de una matriz, mediante la siguiente fórmula:
 $$
-A^{-1} = \frac{1}{Det(A)}Adj(A^t)
+A^{-1} = \frac{1}{Det(A)} \times Adj(A^t)
 $$
 
