--- a/4º Año/Comunicaciones y Redes/Unidad 5/3. Capa de Enlace para Redes LAN.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/3. Capa de Enlace para Redes LAN.md
@@ -68,6 +68,10 @@ La principal desventaja de CSMA es que, a pesar de reducir la probabilidad de co
 ***CSMA/CD (Carrier Sense Multiple Access with Collision Detection)*** es una versión mejorada de CSMA que permite a una estación transmitir solo si detecta que el medio está libre. Si el medio está ocupado, la estación espera. Si durante la transmisión se detecta una colisión, la estación envía una señal de interferencia para notificar a todas las estaciones de la colisión y detiene la transmisión. Luego, la estación espera un tiempo aleatorio antes de intentar retransmitir. Esta técnica reduce el tiempo desaprovechado al tiempo necesario para detectar una colisión, lo que mejora la eficiencia del uso del canal.
 La principal desventaja de CSMA/CD es que, si bien minimiza el tiempo perdido por colisiones, todavía puede experimentar inestabilidad en situaciones de alta carga, especialmente si se utilizan tramas cortas en comparación con el retardo de propagación. Para mitigar esto, se utiliza la técnica de ***espera exponencial binaria*** en redes como Ethernet, donde el tiempo de espera aumenta exponencialmente con cada intento fallido, ayudando a evitar que las colisiones repetidas lleven a la congestión de la red.
 
+>[!tldr] Espera o Retroceso Exponencial Binario
+>Cuando una estación en la red detecta una colisión, detiene inmediatamente la transmisión de datos y emite una señal de jamming para alertar a todas las demás estaciones sobre la colisión. Para evitar nuevas colisiones al retransmitir las tramas, se emplea la técnica de espera exponencial binaria.
+>Después de una colisión, la estación espera un tiempo antes de intentar retransmitir los datos. Este tiempo de espera es aleatorio y se determina a partir de la _**ventana de contención**_, que consiste en pequeños intervalos de tiempo (slots) definidos por la red. Con cada colisión adicional, el tamaño de la ventana de contención se incrementa, y la estación selecciona aleatoriamente el número de slots que deberá esperar antes de intentar transmitir de nuevo.
+
 ## Ethernet
 
 Las redes LAN de alta velocidad más ampliamente utilizadas en la actualidad son las basadas en Ethernet, desarrolladas por el comité de estándares IEEE 802.3. Como ya mencionamos anteriormente cada protocolo MAC implementa a su manera el control de acceso al medio, Ethernet concretamente utiliza la técnica conocida como ***CSMA/CD***.
@@ -83,3 +87,25 @@ El formato normal de una trama Ethernet está compuesta por los siguientes campo
 - **Secuencia de Comprobación de Trama (FCS)**: Está constituido por una comprobación de redundancia cíclica de 32 bits, calculada teniendo en cuenta todos los campos excepto el preámbulo, el SFD y el FCS.
 
 ![[formato-trama-ethernet.png]]
+
+### Especificación del Medio Físico
+
+En la especificación IEEE 802 no solo se especifican los distintos protocolos y métodos de transferencia de datos, sino que también abarca la especificación de los medios físicos que se pueden utilizar para este tipo de redes. El estándar brinda múltiples opciones para realizar el cableado de una red LAN, si bien puede ser confuso tanto para los clientes como para los proveedores, el estándar garantiza la interoperabilidad entre los distintos medios físicos:
+
+- **10BASE5**: Especifica el uso de cable coaxial de 50 ohmios y señalización digital Manchester2. La longitud máxima del segmento de cable se fija a 500 metros. Esta longitud se puede extender mediante la utilización de repetidores.
+- **10BASE2**: Es similar a 10BASE5, excepto por el uso de un cable más fino que admite tomas de conexión para distancias más cortas que el cable de 10BASE5. Se trata de una alternativa menos costosa a aquel.
+- **10BASE-T**: Utiliza par trenzado no apantallado en una topología en estrella. Dada la alta velocidad y la baja calidad de las transmisiones sobre este tipo de cable, la longitud de cada enlace se restringe a 100 m. Como alternativa se puede utilizar un enlace de fibra óptica, en cuyo caso la longitud máxima es de 500 m.
+- **10BASE-F**: Contiene tres especificaciones: una topología en estrella pasiva para la interconexión de estaciones y repetidores con segmentos de hasta 1 km de longitud; un enlace punto a punto que puede ser usado para conectar estaciones o repetidores separados hasta 2 km; y un enlace punto a punto que puede usarse para conectar repetidores a una distancia máxima de 2 km.
+
+Además de estas alternativas, existen varias versiones que funcionan a 100 Mbps, 1 Gbps y 10 Gbps, que serán estudiadas más adelante en esta sección. La
+designación genérica para estos estándares es 100BASE-T. El comité definió varias alternativas para diferentes medios de transmisión.
+Todas las opciones 100BASE-T usan el protocolo MAC y el formato de la trama Ethernet. Mientras que 100BASE-X identifica al conjunto de opciones que usan las especificaciones del medio físico definidas originalmente para ***FDDI (Fiber Distributed Data Interface)***. Todos los esquemas 100BASE-X emplean dos enlaces físicos entre los nodos, uno para transmisión y otro para recepción, este tipo de redes pueden hacer uso de *pares trenzados apantallados (STP)* o *pares trenzados no apantallados (UTP)* de alta calidad (categoría 5), mientras que 100BASE-FX hace uso de fibra óptica. Por otro lado, 100BASE-T4 define una alternativa menos costosa que puede utilizar UTP de voz de categoría 3 además de UTP de categoría 5 de alta calidad. Para alcanzar los 100 Mbps en cables de baja calidad, 100BASE-T4 especifica el uso de 4 líneas de par trenzado entre los nodos, de los cuales tres se usan simultáneamente para la transmisión de datos en una dirección.
+
+![[especificacion-fisica-ethernet.png]]
+
+## Token Ring
+
+Las redes ***Token Ring*** funcionan mediante un mecanismo en el cual un pequeño paquete especial llamado ***token*** circula continuamente por un anillo de dispositivos conectados. En esta topología, cada dispositivo está conectado a dos otros dispositivos formando un anillo cerrado, donde los datos se transmiten secuencialmente, bit a bit, alrededor del anillo. Cada dispositivo actúa como un repetidor, regenerando y retransmitiendo cada bit que recibe para garantizar que los datos lleguen a su destino sin degradación.
+El funcionamiento básico de una red Token Ring se basa en el uso del token para el control de acceso al medio. Solo la estación que captura el token puede transmitir datos. Cuando una estación quiere transmitir, debe esperar a que le llegue el token. Al recibir el token, la estación lo toma y lo convierte en el comienzo de su trama de datos. Luego, la estación transmite sus datos alrededor del anillo, y estos circulan por el anillo hasta llegar al dispositivo destinatario. El dispositivo destinatario copia los datos y, dependiendo del protocolo, marca el paquete como recibido. El token se libera nuevamente en el anillo una vez que la estación emisora ha terminado de transmitir, permitiendo que otra estación pueda usarlo para enviar sus datos. Este mecanismo asegura un acceso equitativo al medio, evitando colisiones al garantizar que solo una estación transmita a la vez.
+Los repetidores en un anillo Token Ring tienen dos estados principales: el estado de escucha y el estado de transmisión. En el estado de escucha, el repetidor retransmite los datos que recibe, mientras que en el estado de transmisión, retransmite los datos de la estación a la que está conectado. Existe también un tercer estado, conocido como cortocircuito (bypass), que permite que las señales propagadas atraviesen el repetidor sin retraso, mejorando las prestaciones y proporcionando una solución parcial al problema de fiabilidad.
+El sistema requiere mecanismos de mantenimiento, como la supervisión de la existencia del token para asegurar que siempre haya uno en circulación y que no haya duplicados, lo cual es crítico para el funcionamiento correcto de la red.
