[Feature] add paso a paso derivacion in unit 5 calc numerico

--- a/5º Año/Ética y Deontología  Profesional/Unidad 1/1. Introduccion Conceptos.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 1/1. Introduccion Conceptos.md
@@ -7,7 +7,7 @@ En este contexto un código moral, son un conjunto de reglas o normas que suelen
 La ética es una rama de la filosofía que se ocupa del estudio racional de la moral, la virtud, el deber, la felicidad y el buen vivir. **Ética = Moral reflexionada o analizada.**
 
 >[!Note] El Proceso Justo
->Un proceso justo es una característica relacionada con sociedades gobernadas por leyes y es a la vez un proceso en que las Leyes se conocen y entienden, además de poderse apelar a más alto nivel para que se apliquen correctamente.
+>Un proceso justo es una característica relacionada con sociedades gobernadas por leyes y es a la vez un proceso en que las leyes se conocen y entienden, además de poderse apelar a más alto nivel para que se apliquen correctamente.
 
 ### Deontología
 
