--- a/5º Año/Ética y Deontología  Profesional/Unidad 2/2. Codigos de Etica para los Licenciados en Informatica.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 2/2. Codigos de Etica para los Licenciados en Informatica.md
@@ -10,7 +10,7 @@ La ética informática es una ciencia que se encarga del comportamiento del ser 
 - **Confidencialidad:** La no revelación de información a terceros, excepto por autorización o requerimiento de autoridad competente.
 - **Responsabilidad:** Cumplimiento cabal y oportuno de compromisos asumidos.
 - **Respeto entre colegas:** Equilibrio del entorno profesional.
-- **Observar las disposiciones normativas:** Aplicación de normas que no sean contrarias y/o incompatibles.
+- **Conocimiento las disposiciones/normas:** Aplicación de normas que no sean contrarias y/o incompatibles.
 - **Competencia y actualización profesional:** Garantía para realizar un trabajo.
 
 >[!tldr] Código de Ética Profesional o Códigos Deontológicos
