Completando unidad 8 | DB

--- a/4º Año/Bases de Datos/Unidad 8/4. Acceso Multiclave.md
+++ b/4º Año/Bases de Datos/Unidad 8/4. Acceso Multiclave.md
@@ -30,9 +30,7 @@ Los ***archivos en retícula*** poseen la siguiente estructura:
 ![[archivo-reticula.png]]
 
 En los cuales las escalas lineales se deben escoger de tal manera que los registros estén uniformemente distribuidos a través de las celdas. Este tipo de estructuras también es adecuada para consultas que impliquen solo una clave de búsqueda. Si bien los archivos en retícula proporcionan un descenso significativo en el tiempo de procesamiento de consultas multiclave. Implican un gasto adicional de espacio, así como una degradación del rendimiento al insertar y borrar registros, además de ser difícil elegir una división en los rangos de las claves para que la distribución de las claves sea uniforme.
-Por otro lado, 
-
-los índices de ***mapas de bits*** son un tipo de índices especializado para consultas sencillas sobre varias claves, aunque cada índice de mapas de bits se construya para una única clave. Para usarlos, los registros de la relación deben estar numerados secuencialmente, de este modo dado un número $n$ es fácil recuperar el registro con número $n$. Esto es particularmente fácil de conseguir si los registros tienen un tamaño fijo y están asignados en bloques consecutivos de un archivo. El número de registro se puede traducir fácilmente en un número de bloque y en un número que identifica el registro dentro del bloque. En este contexto un mapa de bits es un array de bits. En su forma más simple, un índice de mapas de bits sobre un atributo $A$ de la relación $r$ consiste en un mapa de bits para cada valor que pueda tomar $A$. Cada mapa de bits tiene tantos bits como el número de registros de la relación. El í-ésimo bit del mapa de bits para el valor $v_j$ se establece en 1 si el registro con número $i$ tiene el valor $v_j$ para el atributo $A$. El resto de bits del mapa de bits se establecen a 0.
+Por otro lado, los índices de ***mapas de bits*** son un tipo de índices especializado para consultas sencillas sobre varias claves, aunque cada índice de mapas de bits se construya para una única clave. Para usarlos, los registros de la relación deben estar numerados secuencialmente, de este modo dado un número $n$ es fácil recuperar el registro con número $n$. Esto es particularmente fácil de conseguir si los registros tienen un tamaño fijo y están asignados en bloques consecutivos de un archivo. El número de registro se puede traducir fácilmente en un número de bloque y en un número que identifica el registro dentro del bloque. En este contexto un mapa de bits es un array de bits. En su forma más simple, un índice de mapas de bits sobre un atributo $A$ de la relación $r$ consiste en un mapa de bits para cada valor que pueda tomar $A$. Cada mapa de bits tiene tantos bits como el número de registros de la relación. El í-ésimo bit del mapa de bits para el valor $v_j$ se establece en 1 si el registro con número $i$ tiene el valor $v_j$ para el atributo $A$. El resto de bits del mapa de bits se establecen a 0.
 Considérese una relación $r$ con un atributo $A$ que sólo puede tomar un número pequeño de valores. Por ejemplo, la relación *info_cliente* la cual puede tener un campo sexo, que puede tomar sólo los valores ***M*** o ***F***, para este caso se podría tener un mapa de bits para el valor M y otro para F. El i-ésimo bit del mapa de bits para M se establece en 1 si el valor sexo del registro con número $i$ es M, mientras que el resto de bits del mapa de bits se establecen en 0.
 Otro uso importante de los mapas de bits es contar el número de tuplas que satisfacen una selección dada esto resulta importante para el análisis de datos, de este modo la forma de saber la cantidad de tuplas que satisfacen ciertas condiciones es tan simple como hacer la intersección entre mapas de bits. Así se puede obtener el resultado del mapa de bits sin acceder a la relación. Además los índices de mapas de bits son generalmente muy pequeños comparados con el tamaño real de la relación. Los registros tienen generalmente de decenas a centenas de bytes, mientras que un único bit representa a un registro en el mapa de bits.
 
