--- a/4º Año/Bases de Datos/Unidad 8/1. Organizacion Fisica.md
+++ b/4º Año/Bases de Datos/Unidad 8/1. Organizacion Fisica.md
@@ -1,25 +1,23 @@
 Cuando se realiza una consulta a una base de datos cada solicitud especifica la dirección del disco en la que se encuentran esos registros, esta dirección suele ser generalmente el número de bloque del disco. Estos bloques posteriormente serán transferidos del disco a la memoria principal.
-Las bases de datos se almacenan en archivos en discos que se dividen en bloques. Cada bloque puede contener varios elementos de datos y viceversa. Debido a que se encuentran almacenados en la memoria secundaria, el acceso a los datos en mucho más lento que si se almacenaran los datos en la memoria principal.
-Por esa razón uno de los objetivos del sistema de gestión de bases de datos es minimizar las transferencias de bloques entre el disco y la memoria, manteniendo en la memoria todos los bloques que sea posible, maximizando así la posibilidad de que, cuando se tenga que acceder a un bloque, este ya se encuentre en la memoria principal evitando el acceso al disco. No obstante, resulta imposible mantener en la memoria principal todos los bloques, por lo que hay que gestionar la asignación del espacio disponible en la memoria principal.
+Las bases de datos se almacenan en archivos en discos que se dividen en bloques. Cada bloque puede contener varios elementos de datos y viceversa. Debido a que se encuentran almacenados en la memoria secundaria, el acceso a los datos en mucho más lento que si se almacenaran los datos en la memoria principal. Por esa razón uno de los objetivos del sistema de gestión de bases de datos es minimizar las transferencias de bloques entre el disco y la memoria, manteniendo en la memoria todos los bloques que sea posible, maximizando así la posibilidad de que, cuando se tenga que acceder a un bloque, este ya se encuentre en la memoria principal evitando el acceso al disco. No obstante, resulta imposible mantener en la memoria principal todos los bloques, por lo que hay que gestionar la asignación del espacio disponible en la memoria principal.
 
 ## Memoria Intermedia
 
 La memoria intermedia no es más que un gran buffer ubicado en la memoria principal empleada para almacenar las copias de los bloques almacenados en el disco. Siempre se guarda una copia de estos datos en disco, pero puede que dicha copia sea una versión más antigua que la que está en memoria.
-Los sistemas de gestión de bases de datos poseen un subsistema encargado de la asignación y gestión de esta memoria intermedia, el cual recibe el nombre de ***gestor de memoria intermedia (GMI)***. Los gestores de las bases de datos formulan solicitudes a este gestor de memoria intermedia cuando necesitan un bloque del disco. El gestor se encarga de verificar si los bloques solicitados se encuentran en el buffer, en caso de que así sea se pasa al solicitante la dirección del bloque en la memoria principal, de lo contrario el gestor de memoria asigna espacio para ese bloque en el buffer.
-Puede ocurrir que el buffer esté lleno y sea imposible ubicar el bloque solicitado en la memoria principal, en este caso el gestor de memoria descartará algunos de los bloques hasta conseguir el espacio suficiente para colocar el nuevo bloque solicitado. En caso de que los bloques descartados hayan sido modificados los cambios deben ser guardados en el disco.
+Los sistemas de gestión de bases de datos poseen un subsistema encargado de la asignación y gestión de esta memoria intermedia, el cual recibe el nombre de ***gestor de memoria intermedia (GMI)***. Los gestores de las bases de datos formulan solicitudes a este gestor de memoria intermedia cuando necesitan un bloque del disco. El gestor se encarga de verificar si los bloques solicitados se encuentran en el buffer, en caso de que así sea se pasa al solicitante la dirección del bloque en la memoria principal, de lo contrario el gestor de memoria asigna espacio para ese bloque en el buffer. Puede ocurrir que el buffer esté lleno y sea imposible ubicar el bloque solicitado en la memoria principal, en este caso el gestor de memoria descartará algunos de los bloques hasta conseguir el espacio suficiente para colocar el nuevo bloque solicitado. En caso de que los bloques descartados hayan sido modificados los cambios deben ser guardados en el disco.
 Las estrategias para decidir que bloques son sacados del buffer son variadas, aunque generalmente los sistemas operativos utilizan el esquema de ***Least Recently Used (LRU)*** donde se elimina del buffer el bloque al que menos referencias se le hizo recientemente.
 Puede que ciertos bloques sean marcados como ***bloques clavados*** por el gestor de memoria intermedia, esto quiere decir que dicho bloque no puede ser eliminado del buffer, por lo general aquellos bloques que son accedidos más frecuentemente o de forma concurrente son marcados como bloques clavados para mejorar los tiempos de respuesta y evitar posibles errores.
 
 >[!tldr] Salida Forzada de Bloques
->Hay situaciones en la que resulta necesario volver a escribir el bloque en el disco, por más que el buffer tenga espacio suficiente para alojar nuevos bloques. Este proceso de **salida forzosa** se lleva a cabo para asegurar la persistencia de los datos y proteger al sistema de posibles caídas.
+>Hay situaciones en la que resulta necesario volver a escribir el bloque en el disco, por más que el buffer tenga espacio suficiente para alojar nuevos bloques. Este proceso de ***salida forzosa*** se lleva a cabo para asegurar la persistencia de los datos y proteger al sistema de posibles caídas.
 >Los sistemas operativos no están pensados para trabajar con bloques clavados ni salidas forzosas por lo que estas prestaciones resultan esenciales a la hora de implementar un sistema de gestión de bases de datos.
 
-Anteriormente, mencionamos que los sistemas operativos utilizan el mecanismo de ***LRU*** para predecir las referencias futuras a los bloques en memoria principal. Los sistemas de gestión de bases de datos utilizan mecanismos mucho más sofisticados que le permiten predecir las referencias futuras con mucha más precisión, pudiendo determinar con antelación los bloques que se necesitarán examinando cada una de las etapas necesarias para llevar a cabo la operación solicitada por el usuario.
+Anteriormente, mencionamos que los sistemas operativos utilizan el mecanismo de ***LRU*** para predecir las referencias futuras a los bloques en memoria principal. Los sistemas de gestión de bases de datos utilizan el esquema ***Most Recently Used (MRU)*** como mecanismos de reemplazo de bloques, esto es así debido a que las bases de datos obtiene y utilizan datos de forma distinta a la de los sistemas operativos. En sí esta técnica permite predecir con más facilidad las referencias futuras con mucha más precisión, pudiendo determinar con antelación los bloques que se necesitarán, examinando cada una de las etapas necesarias para llevar a cabo la operación solicitada por el usuario.
 
 ## Organización de los Archivos
 
 Las bases de datos se componen de distintos archivos, a su vez los archivos se organizan lógicamente como secuencias de registros. Estos registros se corresponden con los bloques del disco, los cuales son de un tamaño fijo y generalmente son establecidos por el sistema operativo, en cambio, los tamaños de los registros pueden ser fijos o variables.
-En caso de que los registros sean fijos surgen una serie de problemas, supongamos que el tamaño de nuestros registros es de 40 bytes y tenemos un archivo compuesto por multitud de estos registros, en este caso surgen 2 problemas:
+En caso de que los registros sean fijos surgen una serie de problemas, supongamos que el tamaño de nuestros registros es de 40 bytes y tenemos un archivo compuesto por una gran cantidad de estos registros, en este caso surgen dos problemas:
 
 1. Resulta difícil borrar registros de esta estructura.
 2. Puede que algunos registros se saltarán los límites de los bloques.
@@ -28,53 +26,48 @@ En el primero de nuestros problemas ocurre que cuando se borra un registro se ti
 
 ![[registros-fijos.png]]
 
-En un archivo registros de longitud variable el registro insertado puede no caber en el espacio liberado por el registro borrado o puede que solo llene parte del mismo. Los registros de longitud variable surgen de varias maneras en los sistemas de gestión de bases de datos:
+>[!tldr] Borrado de los Registros
+>Generalmente el borrado de los registros es lógico, ya que las operaciones de borrado en disco son costosas, lo que ralentizaría al motor de bases de datos, por esta razón se opta por marcar dichos registros como borrados y reescribirlo en posteriores inserciones. 
 
-- Almacenamiento de varios tipos de registros en un mismo archivo.
-- Tipos de registro que permiten longitudes variables para uno o varios de los campos.
-- Tipos de registro que permiten campos repetidos.
+Por otro lado, en los archivos con registros de longitud variable el registro insertado puede no caber en el espacio liberado por el registro borrado o puede que solo llene parte del mismo.
+La aparición de los registros de longitud variable surgen de varias maneras en los sistemas de gestión de bases de datos, por ejemplo existen bases de datos que almacenan varios tipos de registros en un mismo archivo, otros permiten que uno o más campos de los registros posean longitudes variables, e incluso algunas bases de datos permiten tener registro con campos repetidos. Existen varias formas de implementar los registros variables:
 
-Existen diversas formas de implementar los registros variables, entre ellas las siguientes:
-
-- **Representación en Cadena de Bytes**: Es una forma simple de implementar los registros variables, con la desventaja que no resulta sencillo volver a utilizar el espacio ocupado anteriormente por un registro borrado y por lo general no queda espacio para el aumento del tamaño de los registros.
-- **Estructura de Páginas con Ranuras**: Es una cabecera al principio de cada bloque que contiene la siguiente información:
+- **Representación en Cadena de Bytes**: Es una forma simple de implementar los registros variables, consiste de una agrupar bytes de forma consecutiva e indicar con un delimitador el final del registro. Este modelo de implementación tiene la desventaja que no resulta sencillo volver a utilizar el espacio ocupado anteriormente por un registro borrado y por lo general no queda espacio para el aumento del tamaño de los registros.
+- **Estructura de Páginas con Ranuras**: Consiste en un bloque que posee una cabecera al principio el cual contiene la siguiente información:
 	1. El número de elementos del registro de la cabecera.
 	2. El final del espacio vacío del bloque.
-	3. Un array cuyas entradas contienen la ubicación y el tamaño de cada registro.
+	3. Un arreglo que contiene la ubicación y el tamaño de cada registro en el bloque.
 
 >[!tldr] Borrado de un Registro
->Cuando se borra un registro se libera el espacio y se da el valor de "borrado" a su entrada y se desplazan los registros de bloque situados antes del registro borrado. Todo el espacio libre vuelve a hallarse entre la última entrada del array de la cabecera y el primer registro. También se actualiza de manera adecuada el puntero de final del espacio libre de la cabecera. Se puede aumentar/disminuir el tamaño de los registros utilizando técnicas parecidas (siempre que quede espacio en el bloque). El costo de trasladar los registros no es muy alto, dado que el tamaño del bloque es limitado: un valor típico es 4KB.
+>Cuando se borra un registro se libera el espacio, marcando como borrado a dicho registro, posteriormente se desplazan los registros de bloque situados antes del registro borrado. Todo el espacio libre vuelve a hallarse entre la cabecera y el primer registro. También se actualiza de manera adecuada el puntero de final del espacio libre de la cabecera. Se puede aumentar y/o disminuir el tamaño de los registros utilizando técnicas parecidas siempre que quede espacio en el bloque.
 
 - **Representación de Longitud Fija**: Hay dos técnicas para implementar este tipo de registros variables:
-	- **Espacio reservado**: Existe una longitud de registro máxima que no se supera nunca, se pueden utilizar registros de longitud fija dentro de esa longitud. El espacio no utilizado por los registros más cortos que el espacio máximo se rellena con un símbolo especial de valor nulo o de final de registro.
+	- **Espacio reservado**: Los registros tienen una longitud máxima que no se supera nunca, pudiendo utilizar registros de longitud fija dentro de esa longitud. El espacio no utilizado por los registros más cortos que el espacio máximo se rellena con un símbolo especial de valor nulo o de final de registro.
 	- **Representación con listas:** El registro de longitud variable se representa mediante una lista de registros de longitud fija, enlazada mediante punteros.
 
 ### Organización de los Registros en Archivos
 
 Tipos de organizaciones de archivos
 
-- **Montículo**: Se puede colocar cualquier registro en cualquier parte del archivo en que haya espacio suficiente.
+- **Montículo**: Se puede colocar cualquier registro en cualquier parte del archivo en el que haya espacio suficiente.
 - **Secuenciales**: Se guardan en orden secuencial, basado en el valor de la clave de búsqueda de cada registro.
-- **Agrupaciones**: Se pueden guardar en el mismo archivo registros de relaciones diferentes.
+- **Agrupaciones**: Se guardan en el mismo archivo registros pertenecientes a relaciones diferentes.
 - **Asociativa**: Se calcula una función de asociación (hash) de algún atributo de cada registro. El resultado de la función de asociación especifica el bloque del archivo en que se deberá colocar el registro.
 
-Los archivos secuenciales están diseñados para el procesamiento eficiente de los registros de acuerdo a un orden basado en una ***clave de búsqueda***. Para la recuperación rápida de los registros según la clave de búsqueda, cada registro tiene un puntero al siguiente registro según el orden indicado por la clave de búsqueda.
-Para minimizar el número de accesos a los bloques en el procesamiento de los archivos secuenciales, los registros se guardan físicamente de acuerdo con el orden indicado por la clave de búsqueda.
-Se puede gestionar el borrado utilizando cadenas de punteros (Lista de libres) y para la inserción se aplican las reglas siguientes:
+Los archivos secuenciales están diseñados para el procesamiento eficiente de los registros de acuerdo a un orden basado en una ***clave de búsqueda***. Para la recuperación rápida de los registros según la clave de búsqueda, cada registro tiene un puntero al siguiente registro según el orden indicado por la clave de búsqueda. Para minimizar el número de accesos a los bloques en el procesamiento de los archivos secuenciales, los registros se guardan físicamente de acuerdo con el orden indicado por la clave de búsqueda. Se puede gestionar el borrado utilizando cadenas de punteros (Lista de libres) y para la inserción se aplican las reglas siguientes:
 
-- Localizar el registro que precede al que se va a insertar en el orden de la clave de búsqueda.
-- Si existe algún registro vacío en la lista de libres dentro del mismo bloque que ese registro, el registro nuevo se insertará ahí. En caso contrario el nuevo registro se insertará en un bloque de desbordamiento. En cualquier caso, hay que ajustar los punteros para vincular los registros según el orden de la clave de búsqueda.
+1. Localizar el registro que precede al que se va a insertar en el orden de la clave de búsqueda.
+2. Si existe algún registro vacío en la lista de libres dentro del mismo bloque que ese registro, el registro nuevo se insertará ahí. En caso contrario el nuevo registro se insertará en un bloque de desbordamiento. En cualquier caso, hay que ajustar los punteros para vincular los registros según el orden de la clave de búsqueda.
 
 >[!important] Características de los Archivos Secuenciales
->- Permite la inserción rápida de nuevos registros
->- Funciona bien para un número relativamente pequeño de registros en los bloques de desbordamiento
+>- Permite la inserción rápida de nuevos registros.
+>- Funciona bien para un número relativamente pequeño de registros en los bloques de desbordamiento.
 >- Se debe reorganizar el archivo de modo que vuelva a estar físicamente en orden secuencial.
 
 Algunos sistemas de gestión de bases de datos relacionales guardan cada relación en un archivo diferente para aprovechar completamente el sistema de archivos que forma parte del sistema operativo.
-Generalmente, las tuplas de cada relación pueden representarse como registros de longitud fija. Esta implementación resulta adecuada para los sistemas de gestión de bases de datos diseñados para computadoras personales donde un tamaño pequeño global del código objeto del gestor de base de datos resulta fundamental.
-Otros sistemas de gestión de bases de datos no utilizan directamente el sistema operativo subyacente para la gestión de archivos, en su lugar se asigna al motor de base de datos un archivo de gran tamaño del sistema operativo y en este archivo se guardan todas las relaciones y se confía la gestión de este archivo al gestor de la base de datos.
+Generalmente, las tuplas de cada relación pueden representarse como registros de longitud fija. Esta implementación resulta adecuada para los sistemas de gestión de bases de datos diseñados para computadoras personales donde un tamaño pequeño global del código objeto del gestor de base de datos resulta fundamental. Otras bases de datos no utilizan directamente el sistema operativo subyacente para la gestión de archivos, en su lugar se asigna al motor de base de datos un archivo de gran tamaño del sistema operativo y en este archivo se guardan todas las relaciones y se confía la gestión de este archivo al gestor de la base de datos.
 
 >[!tldr] Agrupaciones de Archivos
->Las agrupaciones de archivos son una organización de archivos que almacena registros relacionados de dos o más relaciones en cada bloque. El uso de las agrupaciones mejora el procesamiento de las reuniones, pero aumenta el retardo del procesamiento de otros tipos de consultas, como podría ser el acceso a los registros de una única tabla, en este caso se necesita más accesos a los bloques que en un esquema que guarde cada tabla en un archivo diferente, ya que en lugar de que aparezcan varios registros de clientes en un mismo bloque cada registro se halla en un bloque diferente.
+>Las agrupaciones de archivos son una organización de archivos que almacena registros de dos o más relaciones en cada bloque. El uso de las agrupaciones mejora el procesamiento de las reuniones, pero aumenta el retardo del procesamiento de otros tipos de consultas, como podría ser el acceso a los registros de una única relación, en este caso se necesita más accesos a los bloques que en los demás esquemas, ya que en lugar de que aparezcan varios registros de clientes en un mismo bloque cada registro se halla en un bloque diferente.
 >En realidad hallar todos los registros pertenecientes a una tabla en particular en un esquema de agrupación de archivos no resulta posible sin el uso de alguna estructura adicional, por ejemplo, para encontrar todos los registros de una determinada tabla se deberían vincular todos los registros de este tipo mediante punteros.
 
