Completando cositas | Lógica

--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proporsional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proporsional.md
@@ -80,5 +80,16 @@ El tercer paso se obtiene aplicar la regla de inferencia modus ponens del axioma
 
 ### Teoremas en la Lógica Proposicional
 
-Al igual que en la primera unidad, se puede probar que un esquema es un teorema en $L$, si puede ser alcanzada por los axiomas y las reglas de inferencia, en sí el procedimiento es idéntico al de deducción con la particularidad de que solo se utilizan axiomas en la prueba.
-Se puede extender la idea de prueba usando teoremas probados previamente como una abreviatura de su propia deducción.
+Al igual que en la primera unidad, se puede probar que un esquema es un teorema en $L$, si puede ser alcanzada por los axiomas y las reglas de inferencia, en sí el procedimiento es idéntico al de deducción con la particularidad de que solo se utilizan axiomas en la prueba. Se puede extender la idea de prueba usando teoremas probados previamente como una abreviatura de su propia deducción.
+
+>[!tldr] Teoremas Probados
+>Ya existen un conjunto de teoremas que han sido probados previamente, los cuales pueden ser reutilizados cuando se realizan las demostraciones, estos teoremas son los siguientes:
+>
+>- $\vdash A$ para cualquier axioma $A$.
+>- $A \rightarrow A$ por meta-teorema de la deducción.
+>- $(A \rightarrow B) \rightarrow ((B \rightarrow C) \rightarrow (A \rightarrow C))$ por meta-teorema de la deducción.
+>- $(¬B \rightarrow ¬A) \rightarrow (A \rightarrow B)$ por meta-teorema de la deducción.
+>- $(B \rightarrow ¬A) \rightarrow (A \rightarrow ¬B)$.
+>- $¬¬A \rightarrow A$.
+
+
